--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -3,7 +3,7 @@ name: Get Feed
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/15 0-23 * * *" # 12am AEST
+    - cron: "0 14 * * *" # 12am AEST
 
 jobs:
   get-rss-feed:
